--- a/resources/styles/index.css
+++ b/resources/styles/index.css
@@ -1,6 +1,5 @@
 body{
     font-family: Arial, Helvetica, sans-serif;
-    
 }
 
 a {
@@ -16,6 +15,7 @@ main{
     display: flex;
     flex-direction: column;
     justify-content: space-between;
+    padding: 7px;
 }
 
 header {
@@ -137,6 +137,10 @@ button:hover {
     width: 100%;
     height: 500px;
     resize: none;
+    border-radius: 5px;
+    border: 1px solid #000000;
+    padding: 5px;
+    overflow: auto;
 }
 
 @media (max-width: 800px) {
