--- a/resources/styles/success.css
+++ b/resources/styles/success.css
@@ -8,7 +8,14 @@ body {
     font-family: Arial, Helvetica, sans-serif;
 }
 
-.content {
+main{
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+#content {
     display: flex;
     flex-direction: column;
     margin-top: 20px;
@@ -17,6 +24,10 @@ body {
     border: 1px solid #ccc;
     border-radius: 5px;
     align-items: center;
+}
+
+h3{
+    margin: 10px;
 }
 
 a {
