--- a/resources/styles/index.css
+++ b/resources/styles/index.css
@@ -3,8 +3,8 @@ body{
 }
 
 a {
-    text-decoration: none;
-    color: #292929;
+    text-decoration: underline;
+    color: #555;
 }
 
 a:hover {
@@ -104,7 +104,7 @@ button:hover {
     margin: 10px;
 }
 
-#contract-details-bar{
+.info-bar{
     display: flex;
     justify-content: space-around;
     padding: 15px;
@@ -115,7 +115,7 @@ button:hover {
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
 }
 
-#contract-details-bar:hover {
+.info-bar:hover {
     background-color: #e8e8e8;
 }
 
