add total funds of the contract to details bar

--- a/resources/styles/index.css
+++ b/resources/styles/index.css
@@ -119,6 +119,10 @@ button:hover {
     background-color: #e8e8e8;
 }
 
+.info-bar span{
+    margin: 5px;
+}
+
 #tools{
     display: flex;
     flex-direction: row;
